--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,7 @@
 body
 {
   background-color: rgb(0, 36, 71);
+  
   color: #ddd;
 }
 
@@ -24,9 +25,8 @@ section {
 
 .navbar
 {
-	background-color: transparent;
+	background-color: rgba(10, 10, 10, 0);
 	border: 0;
-	color: black;
 }
 
 .nav a, .navbar-brand{
