--- a/public_html/stylesheets/style.css
+++ b/public_html/stylesheets/style.css
@@ -1,8 +1,14 @@
+@font-face {
+  font-family: chase;
+  src: url(../fonts/Chase.ttf);
+}
+
 body
 {
-  background-color: rgb(0, 36, 71);
-  
-  color: #ddd;
+  font-family: chase;
+  background-color: rgb(19, 82, 162);
+  color: rgb(240, 241, 238);
+  font-size: 2.6em;
 }
 
 section {
@@ -18,25 +24,28 @@ section {
 
 .text-content
 {
-  color: white;
   margin-top: 2em;
   margin-bottom: 2em;
 }
 
+input, textarea
+{
+  color: black;
+  width: 100%;
+}
+
 .navbar
 {
-	background-color: rgba(10, 10, 10, .8);
+	background-color: rgba(51, 51, 50, .8);
 	border: 0;
 }
 
 .nav a, .navbar-brand{
-  color: #ddd !important;
-}
-
-.nav a
-{
+  color: rgb(240, 241, 238) !important;
   font-size: 1.2em;
 }
+
+
 
 #navbar-collapse
 {
@@ -62,26 +71,18 @@ section {
 
 
 h1.parallax-header{
-  padding-top: 3em;
-  font-size: 5em;
+  padding-top: 2.5em;
+  font-size: 4em;
+  font-weight: 900;
 }
 
 h1.parallax-header.parallax-header-xs
 {
-	font-size: 3em;
+	font-size: 2.6em;
 }
 
-h3.parallax-header{
-  padding-top: 10em;
-} 
 
-h4.parallax-header{
-	padding-top: 10em;
-}	
 
-#parallax-header-2{
-  color: #888;
-}
 
 
 
