--- a/public_html/stylesheets/style.css
+++ b/public_html/stylesheets/style.css
@@ -3,27 +3,50 @@
   src: url(../fonts/Chase.ttf);
 }
 
-body
-{
-  font-family: chase;
-  background-color: rgb(19, 82, 162);
-  color: rgb(240, 241, 238);
-  font-size: 2.6em;
+@font-face {
+  font-family: corbert;
+  src: url(../fonts/Corbert-Regular.otf);
 }
 
-section {
-  padding: 25px 0 35px;
-  
+body
+{
+  font-family: corbert;
+  background-color: rgb(19, 82, 162);
+  color: rgb(240, 241, 238);
+  font-size: 2em;
 }
+
 
 .parallax-container {
   height: 500px;
   width: 100%;
 }
 
+.parallax-header{
+  text-align: center; 
+  margin-top: 0;
+}
+
+h1
+{
+  font-family: chase;
+}
+
+h1.parallax-header{
+  padding-top: 2.5em;
+  font-size: 4em;
+  font-weight: 900;
+}
+
+h1.parallax-header.parallax-header-xs
+{
+  font-size: 2.6em;
+}
+
 
 .text-content
 {
+  /*padding: 25px 0 25px;*/
   margin-top: 2em;
   margin-bottom: 2em;
 }
@@ -34,26 +57,6 @@ input, textarea
   width: 100%;
 }
 
-.navbar
-{
-	background-color: rgba(51, 51, 50, .8);
-	border: 0;
-}
-
-.nav a, .navbar-brand{
-  color: rgb(240, 241, 238) !important;
-  font-size: 1.2em;
-}
-
-
-
-#navbar-collapse
-{
-  /*
-  border-color: rgba(10, 10, 10, .8);
-  background-color: rgba(10, 10, 10, .8);
-  */
-}
 
 .image_container img{
   margin: 0;
@@ -63,23 +66,16 @@ input, textarea
   margin-bottom: 1em;
 }
 
+.text-content a {
+  color: #979;
+  text-decoration: underline;
+}
 
-.parallax-header{
-	text-align: center;	
-	margin-top: 0;
+.text-content a:hover {
+  color: #966;
 }
 
 
-h1.parallax-header{
-  padding-top: 2.5em;
-  font-size: 4em;
-  font-weight: 900;
-}
-
-h1.parallax-header.parallax-header-xs
-{
-	font-size: 2.6em;
-}
 
 
 
