--- a/public_html/stylesheets/navbar.css
+++ b/public_html/stylesheets/navbar.css
@@ -1,8 +1,14 @@
 
+body
+{
+  overflow-x: hidden;
+}
+
 .navbar
 {
 	background-color: rgba(51, 51, 50, .8);
 	border: 0;
+  z-index: 
 }
 
 .nav a, .navbar-brand{
@@ -29,10 +35,34 @@
   color: #999 !important;
 }
 
-#navbar-collapse
+@media (max-width: 768px)
 {
-  /*
-  border-color: rgba(10, 10, 10, .8);
-  background-color: rgba(10, 10, 10, .8);
-  */
+  #navbar-collapse {
+      display: block;
+      position: fixed;
+      top: 0px;
+      left: 100%;
+      z-index: 100;
+      width: 80%;
+      padding-top: 50px;
+      padding-bottom: 1000px;
+      background-color: #111;
+      margin-left: 0;
+      padding-left: 0;
+  }
+
+  #navbar-collapse a {
+    margin-left: 1em;
+    padding-top: .5em;
+    padding-bottom: .5em;
+  }
+
+  button.navbar-toggle{
+    z-index: 101;
+  }
 }
+
+
+
+
+
