--- a/public_html/stylesheets/navbar.css
+++ b/public_html/stylesheets/navbar.css
@@ -1,18 +1,35 @@
 
-body
-{
-  overflow-x: hidden;
+
+/*Increase navbar height*/
+.navbar-fixed-top {
+    min-height: 80px;
+}
+
+.navbar-nav > li > a {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    line-height: 80px;
+}
+
+@media (max-width: 767px) {
+    .navbar-nav > li > a {
+    line-height: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: #ddd !important;}
 }
 
 .navbar
 {
-	background-color: rgba(51, 51, 50, .8);
+	/*background-color: rgba(51, 51, 50, .8);*/
+  background-color: rgba(200, 200, 200, .8);
 	border: 0;
   z-index: 
 }
 
 .nav a, .navbar-brand{
-  color: rgb(240, 241, 238) !important;
+  /*color: rgb(240, 241, 238) !important;*/
+  color: rgb(51, 51, 50) !important;
   font-size: 1em;
 }
 
@@ -25,17 +42,24 @@ body
   padding: 0
 }
 
-.navbar-brand img
+.navbar-header
 {
   height: 100%;
 }
 
-.navbar a:hover
+.navbar-brand img
 {
-  color: #999 !important;
+  height: 80px;
 }
 
-@media (max-width: 768px)
+.navbar a:hover
+{
+  text-decoration: underline !important;
+}
+
+
+
+@media (max-width: 767px)
 {
   #navbar-collapse {
       display: block;
