--- a/public_html/stylesheets/navbar.css
+++ b/public_html/stylesheets/navbar.css
@@ -39,7 +39,7 @@
 }
 
 .navbar-brand{
-  padding: 0
+  padding: 5px 0px 5px 0;
 }
 
 .navbar-header
@@ -49,7 +49,8 @@
 
 .navbar-brand img
 {
-  height: 80px;
+  height: 70px;
+  padding-left: 5px;
 }
 
 .navbar a:hover
